# pyfxp

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: api.md
docs/api/: FxpSpec.md  Q.md  api.md  constants.md  fxp.md  fxpt.md
docs/examples/: example_int.md
examples/integrator/: ex_integ.py  integ_block_diagram.drawio
src/pyfxp/: __init__.py  _pyfxp.py  constants.py
tests/: __init__.py  gen_ref_data.py  test_data.txt  test_error.py  test_fxp.py  test_hello_world.py  test_qfmt.py  test_scalar_vs_array.py
